# juniper-tools

./: .config  Makefile  README.md  Vagrantfile  about1000bytes.txt  about5000bytes.txt  large_packet.txt
benchmarking/: .gitignore  Makefile  README.md  Vagrantfile  ava.py  bisector.py  constants.py  experiment.py  recv_packets.py  scapy_test.py  send_packets.py  send_pkts.sh  tcpdump.py  throughput.py
benchmarking/draft/: draft-clinic-ipv6-ext-hdr-bench-method-00  final.ps  final.txt
benchmarking/scripts/: format_rfc.py  provision.bash
benchmarking/throughput_visual/: 2type_avgThroughput.py  Makefile  actual_attempted.py  create_visual.py  numEntries_avgThroughput.py  pyproject.toml  test.json  test_pygal.py  type_avgThroughput.py
benchmarking/throughput_visual/tests/: test_throughput_visual.py
benchmarking/throughput_visual/throughput_visual.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fragmentation/: .gitignore  Makefile  README.md  Vagrantfile  juniper.patch  packet_data.txt
fragmentation/doc/: about.md
fragmentation/scripts/: box.bash  profile.bash  provision.bash
fragmentation/template/: .dir-locals.el
scripts/: configure.bash  provision.bash  send_lgpkt.bash
