[tool.poetry]
name = "throughput_visual"
version = "0.1.0"
description = ""
authors = ["bnew10 <bradnew10@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.5"
pygal = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
