[tool.poetry]
name = "throughput_visual"
version = "0"
description = "Visualizations of results from the benchmarking project"
authors = ["Juniper Networks Clinic <juniper19@cs.hmc.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
pygal = "^2.4.0"
cairosvg = "^2.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
